--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/marieta/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=/home/INFORMATICA/alu20482156n/.netbeans/8.2/build.properties
